--- a/index.html
+++ b/index.html
@@ -4,11 +4,43 @@
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE-edge">
 	<meta name="viewport" content="width=device-width,initial-scale=1.0">
-	<title>Test Page</title>
+	<link rel="stylesheet" href="style.css">
+	<link rel="preconnect" href="https://fonts.googleapis.com">
+	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+	<link href="https://fonts.googleapis.com/css2?family=Shadows+Into+Light&display=swap" rel="stylesheet">
+	<title>fonts example</title>
 </head>
 <body>
-	<h1>This is a test page</h1><br>
-	<p>This is a test paragraph</p><br>
-	<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. In sodales eros ac velit mattis, sit amet faucibus quam hendrerit. Vivamus semper, leo sed aliquet auctor, orci arcu congue magna, at consequat arcu sem nec sapien. Vivamus sit amet auctor velit. Pellentesque ornare lorem at metus lacinia sodales. Suspendisse et cursus leo, eu viverra metus. Aenean rutrum nisl non nibh hendrerit, sit amet molestie nunc sodales. Etiam imperdiet enim in laoreet sagittis. Duis feugiat quam tellus, vel suscipit leo sollicitudin non. Fusce consectetur euismod mauris, quis hendrerit quam venenatis nec. Nam vel eros dui. Phasellus quis feugiat magna, vel tristique sapien. Aliquam ut luctus nulla. Nulla non metus sit amet leo eleifend fringilla. Cras eget efficitur nisl. Etiam egestas dolor id ornare aliquet. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. </p>
+	<h1>This is the Default HTML Font.</h1>
+    <div class="serif">
+      <h2>Times, Times New Roman, Georgia, serif font.</h2>
+      <p>
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+      </p>
+    </div>
+    <div class="sansserif">
+      <h2>Verdana, Arial, Helvetica, sans-serif</h2>
+      <p>
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+      </p>
+    </div>
+    <div class="monospace">
+      <h2>Lucida Console, Courier, monospace</h2>
+      <p>
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+      </p>
+    </div>
+	<div class="cursive">
+      <h2>Lucida Console, Courier, monospace</h2>
+      <p>
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+      </p>
+    </div>
+	<div class="lament">
+		<h2 style="color: maroon">Liberare Limbus</h2>
+		<p style="color: yellow">
+		Hominem tessem en memento
+      </p>
+	</div>
 </body>
 </html>
