--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@
 	<title>fonts example</title>
 </head>
 <body>
+	<img href="agent3.jpg"><br>
+	<p>I do not have an image of myself on hand at the moment, so here is an ai generated image</p>
+	<h2>Luis Sy</h2><br>
+	<h3>449201<h3>
 	<h1>This is the Default HTML Font.</h1>
     <div class="serif">
       <h2>Times, Times New Roman, Georgia, serif font.</h2>
