--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 	<title>fonts example</title>
 </head>
 <body>
-	<img href="agent3.jpg"><br>
+	<img src="agent3.jpg"><br>
 	<p>I do not have an image of myself on hand at the moment, so here is an ai generated image</p>
 	<h2>Luis Sy</h2><br>
 	<h3>449201<h3>
